{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 279,
  "lineage": "7ceffeba-df12-54ee-51f2-ff587d34bb37",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:450665609241:loadbalancer/app/alb/473564aa072b7df8",
            "arn_suffix": "app/alb/473564aa072b7df8",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-1869528863.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:450665609241:loadbalancer/app/alb/473564aa072b7df8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07332c1a616311d96"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04404aae58273347e"
              },
              {
                "subnet_id": "subnet-0d3be88547c1d1135"
              }
            ],
            "subnets": [
              "subnet-04404aae58273347e",
              "subnet-0d3be88547c1d1135"
            ],
            "tags": {
              "Name": "jupiter-static-dev-alb",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-06-03T15:34:55Z",
              "environment": "dev",
              "project": "jupiter"
            },
            "tags_all": {
              "Name": "jupiter-static-dev-alb",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-06-03T15:34:55Z",
              "environment": "dev",
              "project": "jupiter"
            },
            "vpc_id": "vpc-002b7c75d847eb6b1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:450665609241:loadbalancer/app/alb-private/30d384f5e8b6f21d",
            "arn_suffix": "app/alb-private/30d384f5e8b6f21d",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-alb-private-1869006701.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:450665609241:loadbalancer/app/alb-private/30d384f5e8b6f21d",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-private",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a5a02cb9bf561b16"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-046eeaeaf41b560fe"
              },
              {
                "subnet_id": "subnet-0495b75582ab225cd"
              }
            ],
            "subnets": [
              "subnet-046eeaeaf41b560fe",
              "subnet-0495b75582ab225cd"
            ],
            "tags": {
              "Name": "jupiter-static-dev-alb-private",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-06-03T15:34:55Z",
              "environment": "dev",
              "project": "jupiter"
            },
            "tags_all": {
              "Name": "jupiter-static-dev-alb-private",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-06-03T15:34:55Z",
              "environment": "dev",
              "project": "jupiter"
            },
            "vpc_id": "vpc-002b7c75d847eb6b1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb_private_sg",
            "module.vpc.aws_subnet.private_subnet_1",
            "module.vpc.aws_subnet.private_subnet_2",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:450665609241:listener/app/alb/473564aa072b7df8/09c1588e2510e427",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:450665609241:listener/app/alb/473564aa072b7df8/09c1588e2510e427",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:450665609241:loadbalancer/app/alb/473564aa072b7df8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:450665609241:listener/app/alb/473564aa072b7df8/510c091f59062889",
            "certificate_arn": "arn:aws:acm:us-east-1:450665609241:certificate/373a6be5-7cf7-459e-ad23-0669c44b1965",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:450665609241:targetgroup/alb/59d52bcdb6c15b70",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:450665609241:listener/app/alb/473564aa072b7df8/510c091f59062889",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:450665609241:loadbalancer/app/alb/473564aa072b7df8",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_target_group.alb_target_group",
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_private_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:450665609241:listener/app/alb-private/30d384f5e8b6f21d/f06ce213d9ab0c51",
            "certificate_arn": "arn:aws:acm:us-east-1:450665609241:certificate/373a6be5-7cf7-459e-ad23-0669c44b1965",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:450665609241:targetgroup/alb-private/b784c5e9681481c4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:450665609241:listener/app/alb-private/30d384f5e8b6f21d/f06ce213d9ab0c51",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:450665609241:loadbalancer/app/alb-private/30d384f5e8b6f21d",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb_private",
            "module.alb.aws_lb_target_group.alb_private_target_group",
            "module.alb.aws_security_group.alb_private_sg",
            "module.vpc.aws_subnet.private_subnet_1",
            "module.vpc.aws_subnet.private_subnet_2",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_private_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:450665609241:targetgroup/alb-private/b784c5e9681481c4",
            "arn_suffix": "targetgroup/alb-private/b784c5e9681481c4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:450665609241:targetgroup/alb-private/b784c5e9681481c4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:450665609241:loadbalancer/app/alb-private/30d384f5e8b6f21d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-private",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-002b7c75d847eb6b1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:450665609241:targetgroup/alb/59d52bcdb6c15b70",
            "arn_suffix": "targetgroup/alb/59d52bcdb6c15b70",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:450665609241:targetgroup/alb/59d52bcdb6c15b70",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:450665609241:loadbalancer/app/alb/473564aa072b7df8"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-002b7c75d847eb6b1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:security-group/sg-0a5a02cb9bf561b16",
            "description": "Allow ports 443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a5a02cb9bf561b16",
            "ingress": [],
            "name": "ALB allow SSL Certificate",
            "name_prefix": "",
            "owner_id": "450665609241",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-private-sg"
            },
            "tags_all": {
              "Name": "alb-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-002b7c75d847eb6b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:security-group/sg-07332c1a616311d96",
            "description": "Allow ports 22, 80 and 443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07332c1a616311d96",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Allow SSL Certificate",
            "name_prefix": "",
            "owner_id": "450665609241",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-002b7c75d847eb6b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_SSH_HTTP_HTTPS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:security-group-rule/sgr-098291c555c93a5ac",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-098291c555c93a5ac",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07332c1a616311d96",
            "security_group_rule_id": "sgr-098291c555c93a5ac",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "https_outboud_traffick",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:security-group-rule/sgr-0a49d2f3b224483e6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0a49d2f3b224483e6",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a5a02cb9bf561b16",
            "security_group_rule_id": "sgr-0a49d2f3b224483e6",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb_private_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:security-group-rule/sgr-00f5302bf168f141d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-00f5302bf168f141d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07332c1a616311d96",
            "security_group_rule_id": "sgr-00f5302bf168f141d",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:security-group-rule/sgr-03f1ed3fbb710dd79",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-03f1ed3fbb710dd79",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07332c1a616311d96",
            "security_group_rule_id": "sgr-03f1ed3fbb710dd79",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_HTTPS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:security-group-rule/sgr-0edf54a335f84a504",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0edf54a335f84a504",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07332c1a616311d96",
            "security_group_rule_id": "sgr-0edf54a335f84a504",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:security-group-rule/sgr-0bec4205f4468b018",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0bec4205f4468b018",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07332c1a616311d96",
            "security_group_rule_id": "sgr-0bec4205f4468b018",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auto-scaling",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:security-group/sg-07a51d6d50a408315",
            "description": "Allow SSH trafick on port 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a51d6d50a408315",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private-sg",
            "name_prefix": "",
            "owner_id": "450665609241",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssl"
            },
            "tags_all": {
              "Name": "allow_ssl"
            },
            "timeouts": null,
            "vpc_id": "vpc-002b7c75d847eb6b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auto-scaling",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:security-group/sg-037b4b4486a6c1f1b",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037b4b4486a6c1f1b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07332c1a616311d96"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07332c1a616311d96"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public-sg",
            "name_prefix": "",
            "owner_id": "450665609241",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-002b7c75d847eb6b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auto-scaling",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:security-group-rule/sgr-05c16bd2e78fd8f2d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-05c16bd2e78fd8f2d",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-037b4b4486a6c1f1b",
            "security_group_rule_id": "sgr-05c16bd2e78fd8f2d",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.auto-scaling.aws_security_group.public_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auto-scaling",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "outbound_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:security-group-rule/sgr-0f852cc5422d4ccdb",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0f852cc5422d4ccdb",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07a51d6d50a408315",
            "security_group_rule_id": "sgr-0f852cc5422d4ccdb",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.auto-scaling.aws_security_group.private_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auto-scaling",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_https_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:security-group-rule/sgr-0d8f200c62846bfb7",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0d8f200c62846bfb7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-07332c1a616311d96",
            "security_group_id": "sg-07a51d6d50a408315",
            "security_group_rule_id": "sgr-0d8f200c62846bfb7",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.auto-scaling.aws_security_group.private_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auto-scaling",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:security-group-rule/sgr-00cf63c2d1a49a79a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-00cf63c2d1a49a79a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07a51d6d50a408315",
            "security_group_rule_id": "sgr-00cf63c2d1a49a79a",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.auto-scaling.aws_security_group.private_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auto-scaling",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:security-group-rule/sgr-073ba6f9475a464ee",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-073ba6f9475a464ee",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-07332c1a616311d96",
            "security_group_id": "sg-037b4b4486a6c1f1b",
            "security_group_rule_id": "sgr-073ba6f9475a464ee",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.auto-scaling.aws_security_group.public_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auto-scaling",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:security-group-rule/sgr-0f480dcbfbf135294",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0f480dcbfbf135294",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-07332c1a616311d96",
            "security_group_id": "sg-037b4b4486a6c1f1b",
            "security_group_rule_id": "sgr-0f480dcbfbf135294",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.auto-scaling.aws_security_group.public_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auto-scaling",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:security-group-rule/sgr-0088509e98f0f04f6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0088509e98f0f04f6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-037b4b4486a6c1f1b",
            "security_group_rule_id": "sgr-0088509e98f0f04f6",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.auto-scaling.aws_security_group.public_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d022eaabaf33f7f",
            "association_id": "eipassoc-0a69b2ce97b2050f4",
            "domain": "vpc",
            "id": "eipalloc-01d022eaabaf33f7f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0cdbb296a02076e44",
            "private_dns": "ip-10-0-1-75.ec2.internal",
            "private_ip": "10.0.1.75",
            "public_dns": "ec2-52-45-202-54.compute-1.amazonaws.com",
            "public_ip": "52.45.202.54",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "jupiter-static-dev-Nat-eip",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-06-03T15:34:55Z",
              "environment": "dev",
              "project": "jupiter"
            },
            "tags_all": {
              "Name": "jupiter-static-dev-Nat-eip",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-06-03T15:34:55Z",
              "environment": "dev",
              "project": "jupiter"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_az_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01301a2a9e52ec5fe",
            "association_id": "eipassoc-054c586a362bddfc8",
            "domain": "vpc",
            "id": "eipalloc-01301a2a9e52ec5fe",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0060cac3915977435",
            "private_dns": "ip-10-0-2-46.ec2.internal",
            "private_ip": "10.0.2.46",
            "public_dns": "ec2-34-233-23-102.compute-1.amazonaws.com",
            "public_ip": "34.233.23.102",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "jupiter-static-dev-Nat-eip-az-1b",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-06-03T15:34:55Z",
              "environment": "dev",
              "project": "jupiter"
            },
            "tags_all": {
              "Name": "jupiter-static-dev-Nat-eip-az-1b",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-06-03T15:34:55Z",
              "environment": "dev",
              "project": "jupiter"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:internet-gateway/igw-0da4898c55d6c7632",
            "id": "igw-0da4898c55d6c7632",
            "owner_id": "450665609241",
            "tags": {
              "Name": "jupiter-static-dev-igw",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-06-03T15:34:55Z",
              "environment": "dev",
              "project": "jupiter"
            },
            "tags_all": {
              "Name": "jupiter-static-dev-igw",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-06-03T15:34:55Z",
              "environment": "dev",
              "project": "jupiter"
            },
            "vpc_id": "vpc-002b7c75d847eb6b1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d022eaabaf33f7f",
            "association_id": "eipassoc-0a69b2ce97b2050f4",
            "connectivity_type": "public",
            "id": "nat-04731433837031cec",
            "network_interface_id": "eni-0cdbb296a02076e44",
            "private_ip": "10.0.1.75",
            "public_ip": "52.45.202.54",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d3be88547c1d1135",
            "tags": {
              "Name": "jupiter-static-dev-Nat",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-06-03T15:34:55Z",
              "environment": "dev",
              "project": "jupiter"
            },
            "tags_all": {
              "Name": "jupiter-static-dev-Nat",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-06-03T15:34:55Z",
              "environment": "dev",
              "project": "jupiter"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01301a2a9e52ec5fe",
            "association_id": "eipassoc-054c586a362bddfc8",
            "connectivity_type": "public",
            "id": "nat-054702eead9579819",
            "network_interface_id": "eni-0060cac3915977435",
            "private_ip": "10.0.2.46",
            "public_ip": "34.233.23.102",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04404aae58273347e",
            "tags": {
              "Name": "jupiter-static-dev-Nat_gw",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-06-03T15:34:55Z",
              "environment": "dev",
              "project": "jupiter"
            },
            "tags_all": {
              "Name": "jupiter-static-dev-Nat_gw",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-06-03T15:34:55Z",
              "environment": "dev",
              "project": "jupiter"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_az_1b",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:route-table/rtb-0ded27fea6b4aa9d6",
            "id": "rtb-0ded27fea6b4aa9d6",
            "owner_id": "450665609241",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-04731433837031cec",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jupiter-static-dev-private-rt",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-06-03T15:34:55Z",
              "environment": "dev",
              "project": "jupiter"
            },
            "tags_all": {
              "Name": "jupiter-static-dev-private-rt",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-06-03T15:34:55Z",
              "environment": "dev",
              "project": "jupiter"
            },
            "timeouts": null,
            "vpc_id": "vpc-002b7c75d847eb6b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:route-table/rtb-00440036efc5819aa",
            "id": "rtb-00440036efc5819aa",
            "owner_id": "450665609241",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0da4898c55d6c7632",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jupiter-static-dev-public-rt",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-06-03T15:34:55Z",
              "environment": "dev",
              "project": "jupiter"
            },
            "tags_all": {
              "Name": "jupiter-static-dev-public-rt",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-06-03T15:34:55Z",
              "environment": "dev",
              "project": "jupiter"
            },
            "timeouts": null,
            "vpc_id": "vpc-002b7c75d847eb6b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "az_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c181a711b7982f1",
            "route_table_id": "rtb-0ded27fea6b4aa9d6",
            "subnet_id": "subnet-046eeaeaf41b560fe"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnet_1",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "az_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022f9f26468388b18",
            "route_table_id": "rtb-0ded27fea6b4aa9d6",
            "subnet_id": "subnet-0495b75582ab225cd"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnet_2",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "azz_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d075222f1410a1a",
            "route_table_id": "rtb-0ded27fea6b4aa9d6",
            "subnet_id": "subnet-0a5d2d38daa655a24"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnet_3",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "azz_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a6f34942d4a87a2",
            "route_table_id": "rtb-0ded27fea6b4aa9d6",
            "subnet_id": "subnet-0030300734be9d49b"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnet_4",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd8b2ab967882296",
            "route_table_id": "rtb-00440036efc5819aa",
            "subnet_id": "subnet-0d3be88547c1d1135"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6cd554b22532dca",
            "route_table_id": "rtb-00440036efc5819aa",
            "subnet_id": "subnet-04404aae58273347e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:subnet/subnet-046eeaeaf41b560fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046eeaeaf41b560fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450665609241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jupiter-static-dev-private-subnet-1",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-06-03T15:34:55Z",
              "environment": "dev",
              "project": "jupiter"
            },
            "tags_all": {
              "Name": "jupiter-static-dev-private-subnet-1",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-06-03T15:34:55Z",
              "environment": "dev",
              "project": "jupiter"
            },
            "vpc_id": "vpc-002b7c75d847eb6b1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:subnet/subnet-0495b75582ab225cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0495b75582ab225cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450665609241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jupiter-static-dev-private-subnet-2",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-06-03T15:34:55Z",
              "environment": "dev",
              "project": "jupiter"
            },
            "tags_all": {
              "Name": "jupiter-static-dev-private-subnet-2",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-06-03T15:34:55Z",
              "environment": "dev",
              "project": "jupiter"
            },
            "vpc_id": "vpc-002b7c75d847eb6b1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:subnet/subnet-0a5d2d38daa655a24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5d2d38daa655a24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450665609241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jupiter-static-dev-private-subnet-3",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-06-03T15:34:55Z",
              "environment": "dev",
              "project": "jupiter"
            },
            "tags_all": {
              "Name": "jupiter-static-dev-private-subnet-3",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-06-03T15:34:55Z",
              "environment": "dev",
              "project": "jupiter"
            },
            "vpc_id": "vpc-002b7c75d847eb6b1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:subnet/subnet-0030300734be9d49b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0030300734be9d49b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450665609241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jupiter-static-dev-private-subnet-4",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-06-03T15:34:55Z",
              "environment": "dev",
              "project": "jupiter"
            },
            "tags_all": {
              "Name": "jupiter-static-dev-private-subnet-4",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-06-03T15:34:55Z",
              "environment": "dev",
              "project": "jupiter"
            },
            "vpc_id": "vpc-002b7c75d847eb6b1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:subnet/subnet-0d3be88547c1d1135",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3be88547c1d1135",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450665609241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jupiter-static-dev-public-subnet-1",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-06-03T15:34:55Z",
              "environment": "dev",
              "project": "jupiter"
            },
            "tags_all": {
              "Name": "jupiter-static-dev-public-subnet-1",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-06-03T15:34:55Z",
              "environment": "dev",
              "project": "jupiter"
            },
            "vpc_id": "vpc-002b7c75d847eb6b1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:subnet/subnet-04404aae58273347e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04404aae58273347e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450665609241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jupiter-static-dev-public-subnet-2",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-06-03T15:34:55Z",
              "environment": "dev",
              "project": "jupiter"
            },
            "tags_all": {
              "Name": "jupiter-static-dev-public-subnet-2",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-06-03T15:34:55Z",
              "environment": "dev",
              "project": "jupiter"
            },
            "vpc_id": "vpc-002b7c75d847eb6b1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:vpc/vpc-002b7c75d847eb6b1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0780ed02a19c63c51",
            "default_route_table_id": "rtb-0225c4e7bc1d90be4",
            "default_security_group_id": "sg-0e8022573aff45906",
            "dhcp_options_id": "dopt-08b84390b377912a0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-002b7c75d847eb6b1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0225c4e7bc1d90be4",
            "owner_id": "450665609241",
            "tags": {
              "Name": "jupiter-static-dev-main-vpc",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-06-03T15:34:55Z",
              "environment": "dev",
              "project": "jupiter"
            },
            "tags_all": {
              "Name": "jupiter-static-dev-main-vpc",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-06-03T15:34:55Z",
              "environment": "dev",
              "project": "jupiter"
            }
          }
        }
      ]
    }
  ]
}